Custom error handling mechanism added
Docker compose updated